--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,55 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
+
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+h1 {
+  font-size: 2.25rem; /* Adjust as needed */
+  font-weight: 700;   /* Bold */
+}
+
+h2 {
+  font-size: 1.875rem; /* Adjust as needed */
+  font-weight: 600;    /* Semi-bold */
+}
+
+
+:root {
+  --primary: #ffffff;
+  --primary1: #363738;
+  --secondary: #f5f5f5;
+  --secondary1: #fefaf1;
+  --secondary2: #db4444;
+  --bg: #ffffff;
+  --text: #fafafa;
+  --text1: #7d8184;
+  --text2: #000000;
+  --button: #000000;
+  --button1: #00ff66;
+  --button2: #db4444;
+  --hover_button: #e07575;
+  --hover_button1: #a0bce0;
+
+  [data-theme="dark"] {
+    --primary: #fff;
+    --primary1: #363738;
+    --secondary: #f5f5f5;
+    --secondary1: #fefaf1;
+    --bg: #ffffff;
+    --text: #fafafa;
+    --text1: #7d8184;
+    --text2: #000000;
+    --button: #000000;
+    --secondary2: #db4444;
+    --button1: #00ff66;
+    --button2: #db4444;
+    --hover_button: #e07575;
+    --hover_button1: #a0bce0;
+  }
 }
